--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,38 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>My Games List</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let game of games | async">
-      {{game.name}}
-    </ion-item>
+  <h1>Games List</h1>
+  <button ion-button (click)="addGame()">
+    <ion-icon name="add"></ion-icon>
+    Add New Game
+  </button>
+  <ion-list inset>
+    <ion-item-sliding *ngFor="let game of games | async">
+      <ion-item>
+        <ion-row>
+          <ion-col>
+            {{game.name}}
+          </ion-col>
+          <ion-col>
+            {{game.cost}}
+          </ion-col>
+          <ion-col>
+            {{game.rating}}
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button color="primary">
+        <ion-icon name="build" ></ion-icon>
+        Edit</button>
+        <button ion-button color="danger" (click)="deleteGame(game)">
+        <ion-icon name="trash"></ion-icon>
+        Delete</button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
